--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,64 +1,68 @@
 body,
 html {
-  height: 100%;
-   margin: 0;
-   padding: 0;
-   overflow: hidden;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
 form {
-  font-family: sans-serif;
+    font-family: sans-serif;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .bg-img {
-  background-image: url("../img/backgrounds/login.jpg");
-  min-height: 100vh;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+    background-image: url("../img/backgrounds/login.jpg");
+    min-height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
 .container {
-  position: absolute;
-  right: 0;
-  margin: 50px;
-  max-width: 300px;
-  padding: 16px;
-  background-color: white;
+    position: absolute;
+    right: 0;
+    margin: 50px;
+    max-width: 300px;
+    padding: 16px;
+    background-color: white;
+}
+
+h2, h5, label {
+    color: #414e57;
 }
 
 input[type=text],
 input[type=email],
 input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
 }
 
 input[type=text]:focus,
 input[type=email]:focus,
 input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
+    background-color: #ddd;
+    outline: none;
 }
 
 .btn {
-  background-color: #04c153;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  opacity: 0.9;
+    background-color: #04c153;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    opacity: 0.9;
 }
 
 .btn:hover {
-  opacity: 1;
+    opacity: 1;
 }
